; ModuleID = '/home/carl/AnghaBench/freebsd/libexec/bootpd/extr_readfile.c_rdtab_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/libexec/bootpd/extr_readfile.c_rdtab_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HASHTABLESIZE = common dso_local global i32 0, align 4
@hwhashtable = common dso_local global i8* null, align 8
@iphashtable = common dso_local global i8* null, align 8
@nmhashtable = common dso_local global i8* null, align 8
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Unable to allocate hash tables.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rdtab_init() #0 {
  %1 = load i32, i32* @HASHTABLESIZE, align 4
  %2 = call i8* @hash_Init(i32 %1)
  store i8* %2, i8** @hwhashtable, align 8
  %3 = load i32, i32* @HASHTABLESIZE, align 4
  %4 = call i8* @hash_Init(i32 %3)
  store i8* %4, i8** @iphashtable, align 8
  %5 = load i32, i32* @HASHTABLESIZE, align 4
  %6 = call i8* @hash_Init(i32 %5)
  store i8* %6, i8** @nmhashtable, align 8
  %7 = load i8*, i8** @hwhashtable, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %0
  %10 = load i8*, i8** @iphashtable, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i8*, i8** @nmhashtable, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %19, label %15

15:                                               ; preds = %12, %9, %0
  %16 = load i32, i32* @LOG_ERR, align 4
  %17 = call i32 @report(i32 %16, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %18 = call i32 @exit(i32 1) #3
  unreachable

19:                                               ; preds = %12
  ret void
}

declare dso_local i8* @hash_Init(i32) #1

declare dso_local i32 @report(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
